# soundcheck

./: .flake8  .gitignore  README.md  checks_example.py  pyproject.toml
src/libcheck/: __init__.py  __main__.py  default_checks.py  util.py
src/soundcheck/: __init__.py  __main__.py  check.py  default_checks.py  main.py
typings/tinytag/: __init__.pyi  tinytag.pyi
