[tool.poetry]
name = "libcheck"
version = "0.1.0"
description = "TODO"
authors = ["khanfluence <khanfluence@gmail.com>"]

[tool.poetry.scripts]
libcheck = "libcheck:main"

[tool.poetry.dependencies]
python = "^3.8"
tinytag = "^1.7.0"
typer = "^0.4.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
show_column_numbers = true
show_error_codes = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"
