[tool.poetry]
name = "soundcheck"
version = "0.1.0"
description = "TODO"
authors = ["khanfluence <khanfluence@gmail.com>"]

[tool.poetry.scripts]
soundcheck = "soundcheck:main"

[tool.poetry.dependencies]
python = "^3.8"
tinytag = "^1.7.0"
typer = "^0.4.0"
loguru = "^0.5.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
show_column_numbers = true
show_error_codes = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"

[[tool.mypy.overrides]]
module = ['tqdm.*']
ignore_missing_imports = true
